- hacky dynamic vertical alignment that doesn't completely suck (+4 squashed commits) - keep stuff horizontally aligned when resizing the window - make sure that we can remove a different type of custom view when showing an image viewer - refactor and add comments

--- a/src/styles/brackets.less
+++ b/src/styles/brackets.less
@@ -236,8 +236,10 @@ a, img {
         background: @background-color-3 url('images/no_content_bg.svg') no-repeat center 45%;
     }
     #image-holder {
-        position: absolute;
-        top: 0;
+        display: table;
+        margin-left: auto;
+        margin-right: auto;
+        position: relative;        
         #img-data {
             font-weight: 500;
         }
